[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Attributes/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Weapons/GuidedMissile.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Weapons/0031MissileB.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 5.58184

[sub_resource type="CircleShape2D" id=2]
radius = 543.828

[node name="GuidedMissile" type="KinematicBody2D"]
position = Vector2( 0.5, 0 )
z_index = 5
collision_layer = 0
collision_mask = 8
script = ExtResource( 2 )

[node name="HitBox" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -0.496624, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="EnemyDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
shape = SubResource( 2 )

[node name="LifeSpan" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="timeout" from="LifeSpan" to="." method="_on_LifeSpan_timeout"]
